argocd-apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/hostname: "whoami.colo.virington.com"
    external-dns.alpha.kubernetes.io/target: "172.21.252.132"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "whoami.colo.virington.com"
    secretName: whoami-tls
  rules:
  - host: "whoami.colo.virington.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
